--- a/package.json
+++ b/package.json
@@ -1,8 +1,18 @@
 {
   "name": "instagram-downloader",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "author": "Madaminov Behruz",
+  "description": "Insta Downloader is an Instagram downloader",
+  "keywords": [
+    "vite",
+    "react",
+    "react-redux",
+    "redux-toolkit",
+    "sass",
+    "tailwindcss"
+  ],
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -10,8 +20,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
+    "@vercel/analytics": "^1.3.1",
+    "i18next": "^23.11.5",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^14.1.2",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.0",
     "sass": "^1.77.6"
   },
   "devDependencies": {
