--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.6",
     "@vercel/analytics": "^1.3.1",
+    "axios": "^1.7.2",
+    "cheerio": "^1.0.0-rc.12",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.0.0",
     "i18next-http-backend": "^2.5.2",
     "js-cookie": "^3.0.5",
+    "qs": "^6.12.2",
     "react": "^18.3.1",
     "react-devtools": "^5.3.0",
     "react-dom": "^18.3.1",
