added: regex for feching

--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-VITE_PUBLIC_API_URL=https://saveig.app/api/
-VITE_PUBLIC_API_Q=https://www.instagram.com/stories/_jumayev_25/3401686338401009581/
-VITE_PUBLIC_API_T=media
-VITE_PUBLIC_API_lang=en
+VITE_PUBLIC_API_KEY=547797ee56mshc75eea80117c5d1p14949fjsn519a5f3e4811
